Social Reform Laws + Locs

--- a/localisation/english/ww1_raj_l_english.yml
+++ b/localisation/english/ww1_raj_l_english.yml
@@ -38,10 +38,16 @@
 
  RAJ_indian_army_dynamic:0 "Indian Army"
  RAJ_indian_army_dynamic_desc:0 "§Y''The British Government has undertaken to protect the dominions of the Native princes from invasion and even from rebellion within ; its army is organized for the defence not merely of British India, but of all possessions under the suzerainty of the King-Emperor.'' - Imperial Gazetteer of India§!\n\nThe term 'Indian Army' was first used informally to describe the broader 'Presidency Armies' of the Bengal, Madras and Bombay Armies. The Indian Army, raised as an independent army by the Government of India in 1895, gradually absorbed the three long-established Presidency Armies, fully integrating them in 1903. The same year, Lord Kitchener was appointed Commander-in-Chief of India and began what became known as the Kitchener Reforms.\n\nThese reforms structured the modern Indian Army, completing the unification of the three former Presidency Armies as well as other forces, outlining the defence of the North-West Frontier against foreign aggression as the primary role of the army, and the maintenance of internal security as a secondary role, in support of the police. With the reforms ending in 1909, the Indian Army was organised along British lines, although it always lagged behind in terms of equipment. Now a reformed force, the Indian Army has yet to see the light of a battlefield.\n\n§RIt would take a major conflict to close the gap.§!"
+
+ RAJ_tribal_raids:0 "Tribal Raids"
+ RAJ_tribal_raids_desc:0 ""
  
  # Focus Ideas
- RAJ_factory_act_idea:0 "Indian Factories Act"
- RAJ_factory_act_idea_desc:0 "The Indian Factories Act incorporates the draft Conventions and Recommendations of the Washington International Labour Conference, with the exception of the draft convention on maternity, the draft convention on maternity benefits and Mines. Repealing it without proper justification would result in major discontent."
+ RAJ_centralise_administrative_control_idea:0 "Centralise Administrative Control"
+ RAJ_centralise_administrative_control_idea_desc:0 ""
+
+ RAJ_social_reforms_dynamic:0 "Social Reforms"
+ RAJ_social_reforms_dynamic_desc:0 ""
 
  RAJ_the_breadbasket_of_the_empire_idea:0 "Breadbasket of the Empire"
  RAJ_the_breadbasket_of_the_empire_idea_desc:0 "India is often described as Britain's crown jewel. While a source of great wealth and a symbol of British colonial dominance throughout the world, our most valuable qualities to London shine through the war effort: Our manpower and natural resources are the reason why Britain can stand its ground today, and why Britain will be able to stand its ground tomorrow. And it is only through full mobilisation that we will be able to exploit these qualities to the greatest extent possible."
@@ -524,10 +530,6 @@
  RAJ_viceroy_executive_council_category:0 "Viceroy's Executive Council Decisions"
  RAJ_viceroy_executive_council_category_desc:0 "Established as an advisory council by the Regulating Act of 1773 and transformed into a functioning cabinet by the Indian Councils Act of 1861, the Viceroy's Executive Council is the effective government of the Raj, with each member having an assigned portfolio such as revenue, military, law, finance, home and public works. The Commander-in-Chief also sits on the Council as an extraordinary member.\n\nIf deemed necessary, the Viceroy is allowed to overrule the Council on affairs. The Indian Councils Act 1909, also known as the §YMorley-Minto Reforms§!, enabled the Viceroy to nominate one Indian member to the Executive Council, leading to the appointment of §YSatyendra Prasanna Sinha§! as the first Indian member.\n"
 
- RAJ_repel_factory_act:0 "Repeal the Indian Factories Act"
- RAJ_repel_factory_act_desc:0 "While the Indian Factories Act was needed to improve labour conditions and thus gain public support, it now stands against our production quotas."
- RAJ_you_can_repel.tt:0 "\nTaking the focus §YMobilize the Raj§! will prevent §Rdiscontent§! from this decision\n"
-
  RAJ_expand_raj_usa_cooperation:0 "Expand USA-Raj Cooperation"
 
  RAJ_simla_convention:0 "Simla Convention"
@@ -564,12 +566,22 @@
  decision_cost_CP_25_PP_15:0 "£command_power  §Y25§! £pol_power  §Y15§!"
  decision_cost_CP_25_PP_15_blocked:0 "£command_power  §R25§! £pol_power  §Y15§!"
  decision_cost_CP_25_PP_15_tooltip:0 "It costs £command_power  §Y25§! and £pol_power  §Y15§! to take the decision"
+
  RAJ_consolidate_indian_laws:0 "Consolidate Indian Laws"
+
  RAJ_promote_western_education:0 "Promote Western Education"
+
  RAJ_supress_reformist_newspapers:0 "Supress Reformist Newspapers"
+
  RAJ_supress_nationalist_newspapers:0 "Supress Nationalist Newspapers"
+
  RAJ_supress_socialists_groups:0 "Supress Socialists Groups"
+
  RAJ_seize_assets_of_seditious_individuals:0 "Seize Assets of Seditious Individuals"
+
+ # Social Reforms
+ RAJ_wild_birds_and_animals_protection_act:0 "Wilds Birds and Animals Protection Act"
+ RAJ_destructive_insects_and_pests_act:0 "Destructive Insects and Pests Act"
  
  # Survey of India
  RAJ_survey_of_india_category:0 "Survey of India"
@@ -1045,7 +1057,7 @@ RAJ_exploit_princely_ressources_desc:0 ""
 
 RAJ_rowlatt_committee:0 "Sedition Committee"
 RAJ_rowlatt_committee_desc:0 ""
-RAJ_rowlatt_committee_reward:0 "We will establish the §YSedition Committee§!, chaired by Sir §YSidney Rowlatt§!, to assess the threat to British rule posed by §Rrevolutionary movements§! and to determine the legal changes necessary to deal with them.\n\nSeveral £GFX_decision_icon_small §YDecisions§! will then be unlocked in order to strengthen the committee and obtain information on our foes.\n\nCompleting the decision §YExpand USA-Raj Cooperation§! (Unlocked by the §YDefence of India Act§! focus), and obtaining the approval of the USA, will enable several £GFX_decision_icon_small §YDecisions§! to deepen cooperation between the USA and the Raj.\n\n"
+RAJ_rowlatt_committee_reward:0 "We will establish the §YSedition Committee§!, chaired by §YSir Sidney Rowlatt§!, to assess the threat to British rule posed by §Rrevolutionary movements§! and to determine the legal changes necessary to deal with them.\n\nSeveral £GFX_decision_icon_small §YDecisions§! will then be unlocked in order to strengthen the committee and obtain information on our foes.\n\nCompleting the decision §YExpand USA-Raj Cooperation§! (Unlocked by the §YDefence of India Act§! focus), and obtaining the approval of the USA, will enable several £GFX_decision_icon_small §YDecisions§! to deepen cooperation between the USA and the Raj.\n\n"
 
 RAJ_rowlatt_act:0 "Rowlatt Act"
 RAJ_rowlatt_act_desc:0 ""
