--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -3639,7 +3639,7 @@
  SER_tools_modernization_desc:0 "During our economic war with Austria-Hungary, we developed our own means of production in order to gain autonomy. This difficult period gives us the opportunity to get ahead of our industrialization."
  SER_french_republican_support_tooltip:0 "We will reach out to France to ask them for support in our regime change. If they approve, the regime change might go far easier. However, ensuring French support would require also ensuring Russian support, which would be difficult to obtain."
  SER_depose_the_king_tooltip:0 "We will start the process of removal of the monarchy. It might provoke monarchist sympatizers into action!"
- SER_roads_development:0 "Road development"
+ SER_roads_development:0 "Road Development"
  SER_roads_development_desc:0 "Serbia is still a rural country. It is important to connect each provincial capital by establishing maintained and secure national roads through the territory."
  SER_beograd_expansion:0 "Beograd Expansion"
  SER_beograd_expansion_desc:0 "The modernization of our economy allows us to centralize part of our investments in the capital. Belgrade will welcome new factories in the automotive and canning sectors."
