--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4983,7 +4983,7 @@ ww1_romania.20.d:0 "As a way to protest the new conservative government, the PNL
 ww1_romania.20.a:0 "The pro Carp faction wins!"
 ww1_romania.20.b:0 "The 'Romanian Young-Turks' win!"
 ww1_romania.18.t:0 "King Appoints New Government"
-ROM_conservative_government:0 "The §cPC§! are in Power"
+ROM_conservative_government:0 "The government is lead by the §cPC§! "
 ww1_romania.17.t:0 "PC Majority Elected!"
 ww1_romania.17.d:0 "The recently announced Romanian elections have came to an end. With the votes being counted up, the PC has been announced the winner of the elections, securing a quite large electoral landslide. With this, we will finally have the mandate to pass out agenda. The Romanian people still expect reforms to continue, so we must be careful in our leadership. Failing to govern properly could lead to King Carol outright dismissing us!"
 ww1_romania.17.a:0 "Finally! Let's get to governing"
@@ -5145,7 +5145,7 @@ ROM_the_workers_party:0 "The Workers Party"
 ROM_the_workers_party_desc:0 "Let it be known! The strongest supporter of workers interests is the PNL! We must continue our progress with previous reforms, and regulate the maxiumum hours Romanians are allowed to work."
 ROM_minimum_wage_law_idea:0 "Minimum Wage"
 ROM_reduced_working_week:0 "Reduced Working Week"
-ROM_liberal_government:0 "the §lPNL§! is in power"
+ROM_liberal_government:0 "The government is lead by the §lPNL§!"
 ROM_economic_protectionalism:0 "Romania First!"
 ROM_a_nation_of_peasants:0 "A Nation of Farmers"
 ROM_a_nation_of_peasants_desc:0 "The farmers of Romania are the backbone of the entire nation, the reason Romanians have food to eat. Being a part of such a crucial demographic, its key that we reward them. We shall pass new regulations on land lords, and give back some of the land they deserve to the them."
