carp dictator stuff

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4970,6 +4970,7 @@
 
 
 #####romania
+#events
 ww1_romania.18.d:0 "With the king losing faith in the current government, the current Prime Minister has been forced to resign. With the Prime Minister spot vacant, the king will now have to form a new government. The king has several different options available, and must pick the best one. Who shall be appointed to form the next government?"
 ww1_romania.18.a:0 "The PCD will lead a stable government!"
 ww1_romania.18.b:0 "The Liberals should be given another chance"
@@ -5099,6 +5100,10 @@ ww1_romania.37.t:0 "Old Guard Concerned about our Reforms!"
 ww1_romania.37.d:0 ""
 ww1_romania.37.a:0 "Go through with them anyways."
 ww1_romania.37.b:0 "Pause the reforms."
+ww1_romania.39.t:0 "Socialist Clubs Gaining Popularity in Moldavia!"
+ww1_romania.39.d:0 "In Moldavia recently, socialist clubs have been gaining ever increasing popularity, with rotten socialist ideas being spread throughout society. The strength of the clubs, are still rising with no signs of pausing. If this trend continues, this may pose a serious threat to our rule and the people of Romania."
+ww1_romania.39.a:0 "Something must be done."
+
 ROM_the_party_of_thieves:0 "The Party of Thieves"
 ROM_the_party_of_thieves_desc:0 "The PNL governments of the past have been filled with corruption, corruption so deeply rooted everywhere in society that an investigation is needed. We must investigate several public institutions for PNL corruption, and shut them down."
 pot_tt:0 "When this focus is selected:\nGets event '§YShutting Down the Tramcar Society§!'\nWe will attempt to take down several pro §lPNL§! organizations, on charges of corruption. We should be prepared to face §Rsignificant§! opposition to these actions!"
@@ -5370,7 +5375,30 @@ ROM_war_propaganda:0 "War Propaganda"
 ROM_war_propaganda_desc:0 ""
 ROM_general_mobilization:0 "General Mobilization"
 ROM_general_mobilization_desc:0 ""
- #custom tooltips
+ROM_form_the_fppr:0 "Form the FPPR"
+ROM_form_the_fppr_desc:0 ""
+ROM_deal_with_the_liberal_king:0 "Deal With the Liberal King"
+ROM_deal_with_the_liberal_king_desc:0 "The last man that can threaten our power is the king himself. Aligned with the liberals, King Ferdinand clearly cannot be trusted! He would take any opprotunity he could get to depose us for his prefered party, the PNL - or whats left of it. With parliament disbanded, Carp himself will assume responsibility for writing a new constitution, one which will protect Romanian democracy from the king by removing his ability to dismiss governments."
+deal_with_lib_king.tt:0 "Gets event '§YThe Carp Constitution§!'\nDisables the decision category §Y'The Kings Country§!' and all relating decisions and events. The king will no longer be able to §Rdismiss§! our government, and his opinion of us will no longer effect our §YPolitical Power§! or §YStability§!"
+ROM_consolidate_the_dictatorship:0 "Consolidate the Dictatorship"
+ROM_consolidate_the_dictatorship_desc:0 ""
+ROM_the_national_ideal:0 "The National Ideal"
+ROM_the_national_ideal_desc:0 ""
+ROM_anti_russian_focus:0 "Promote Anti-Russian Propaganda"
+ROM_anti_russian_focus_desc:0 ""
+ROM_anti_russian_propaganda_idea:0 "Anti-Russian Propaganda"
+ROM_end_cultural_intolerance:0 "End Cultural Intolerance"
+ROM_end_cultural_intolerance_desc:0 ""
+ROM_cooperation_with_germany:0 "Cooperation with Germany"
+ROM_cooperation_with_germany_desc:0 ""
+ROM_suppress_moldavian_socialist_clubs:0 "Suppress Moldavian Socialist Clubs"
+ROM_suppress_moldavian_socialist_clubs_desc:0 "Recently in Moldavia, clubs supporting the ideas of socailism have been gaining popularity. These ideas are dangerous to the nation, and are a social disease that must be crushed."
+ROM_moldavian_socialist_clubs_rising:0 "Moldavian Socialist Clubs Gaining Traction"
+ROM_moldavian_socialist_clubs_rising_desc:0 "Recently in Moldavia, socialist clubs have been gaining growing traction among the people there. Many are participating in these clubs, spreading the ideas of socialism everywhere they can."
+ROM_national_unity_idea:0 "National Unity"
+ROM_reclamation_of_bessarabia:0 "Liberation of Bessarabia"
+
+#custom tooltips
 ROM_the_kings_government:0 "The King's Government"
 ROM_the_kings_government_desc:0 "The failure of PC and PNL to govern the country in recent years has forced our hand. With the current government dismissed, we shall task the moderates of the PCD to form a new government. This sensible coalition should hopefully govern the country carefully in the coming times."
 ROM_romanian_army_idea:0 "Romanian Army"
@@ -5402,7 +5430,6 @@ ROM_french_weapons_withdrawn.tt:0 "We will §Rlose§! the military factory from 
 ROM_german_weapons_withdrawn.tt:0 "We will §Rlose§! the military factory from the focus "§YKrupp Weapon Purchases§!""
 ROM_rural_base.tt:0 "If §YDmitrie Sturdza§! is hired as an advisor, this focus would have the following effects:\nChange in popularity of Democracy: §G+15.00%§!\nPolitical Power: §G+50§!.\nGain Base Stability: §G+5.00%§!.\n\n"
 ROM_rural_base.tt2:0 "\nOur advisor §YDmitrie Sturdza§! is §GImproving§! the effects of this focus."
-
 
  TUR_promote_turkish_culture_in_aegean:0 "Promote Turkish Culture in Aegean"
  TUR_promote_turkish_culture_in_aegean_desc:0 "There are still major Greek settlements in large Aegean cities. Though we cannot simply outpopulate them, we can assimilate them by promoting Turkish culture among the Anatolian Greeks."
@@ -5442,11 +5469,6 @@ ROM_rural_base.tt2:0 "\nOur advisor §YDmitrie Sturdza§! is §GImproving§! the
  TUR_autonomy_for_egypt_tt:0 "£ww1_flag_ARB §YArab Minority§! modifier will be lifted from every Egyptian core.\nStates except §Y[453.GetName]§! and §Y[447.GetName]§! will become §YAutonomous Region§! once controlled by us."
  TUR_reform_the_african_administration:0 "Reform the African Administration"
  TUR_reform_the_african_administration_desc:0 "Sahara with its massive desert makes it hard to rule the few people it inhabits. But as the great Ottoman Empire, we can't neglect people living in these regions. We must reform the administration in those regions to best rule and control them."
-ROM_form_the_fppr:0 "Form the FPPR"
-ROM_form_the_fppr_desc:0 ""
-ROM_deal_with_the_liberal_king:0 "Deal With the Liberal King"
-ROM_deal_with_the_liberal_king_desc:0 "The last man that can threaten our power is the king himself. Aligned with the liberals, King Ferdinand clearly cannot be trusted! He would take any opprotunity he could get to depose us for his prefered party, the PNL - or whats left of it. With parliament disbanded, Carp himself will assume responsibility for writing a new constitution, one which will protect Romanian democracy from the king by removing his ability to dismiss governments."
-deal_with_lib_king.tt:0 "Gets event '§YThe Carp Constitution§!'\nDisables the decision category §Y'The Kings Country§!' and all relating decisions and events. The king will no longer be able to §Rdismiss§! our government, and his opinion of us will no longer effect our §YPolitical Power§! or §YStability§!"
  TUR_the_empire_of_muslims:0 "The Empire of Muslims"
  TUR_the_empire_of_muslims_desc:0 "Though our empire has a large Christian minority, it started as a Muslim beylik in Anatolia. As the centuries passed by, Christian minority has always staged reellions against our rule. It was the Muslims inside and outside of our empire who stayed loyal. We must reward those who stated loyal to us, and punish those who didn't."
  TUR_the_empire_of_muslims_tt:0 "£ww1_flag_ARB §YArab Minority§!, £ww1_flag_ALB §YAlbanian Minority§! and £ww1_flag_KUR §YKurdish Minority§! modifiers will no longer have a negative stability or war support impact on §YSeperatist Sentiments§!.\n\nThe negative stability and war support impact on §YSeperatist Sentiments§! caused by £ww1_flag_ARM §YArmenian Minority§!, £ww1_game_rule_flag_GRE §YGreek Minority§!, £ww1_game_rule_flag_YUG §YSouth Slavic Minority§!, §YAssyrian Minority§!, £ww1_flag_GEO §YGeorgian Minority§! and £ww1_flag_ROM §YRomanian Minority§! modifiers will be doubled."
