--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5392,7 +5392,7 @@ ROM_end_cultural_intolerance_desc:0 ""
 ROM_cooperation_with_germany:0 "Cooperation with Germany"
 ROM_cooperation_with_germany_desc:0 ""
 ROM_suppress_moldavian_socialist_clubs:0 "Suppress Moldavian Socialist Clubs"
-ROM_suppress_moldavian_socialist_clubs_desc:0 "Recently in Moldavia, clubs supporting the ideas of socailism have been gaining popularity. These ideas are dangerous to the nation, and are a social disease that must be crushed."
+ROM_suppress_moldavian_socialist_clubs_desc:0 "Recently in Moldavia, clubs supporting the ideas of socialism have been gaining popularity. These ideas are dangerous to the nation, and are a social disease that must be crushed."
 ROM_moldavian_socialist_clubs_rising:0 "Moldavian Socialist Clubs Gaining Traction"
 ROM_moldavian_socialist_clubs_rising_desc:0 "Recently in Moldavia, socialist clubs have been gaining growing traction among the people there. Many are participating in these clubs, spreading the ideas of socialism everywhere they can."
 ROM_national_unity_idea:0 "National Unity"
