--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5383,7 +5383,7 @@ deal_with_lib_king.tt:0 "Gets event '§YThe Carp Constitution§!'\nDisables the 
 ROM_consolidate_the_dictatorship:0 "Consolidate the Dictatorship"
 ROM_consolidate_the_dictatorship_desc:0 ""
 ROM_the_national_ideal:0 "The National Ideal"
-ROM_the_national_ideal_desc:0 ""
+ROM_the_national_ideal_desc:0 "The National Ideal is an editorial that Carp published, speaking of how Romania's survival was uncertain as long as Russia bordered the Danube Delta, and pushes for the reclamation of Bessarabia from Russia, and that we must seek greater cooperation with the Central Powers. "
 ROM_anti_russian_focus:0 "Promote Anti-Russian Propaganda"
 ROM_anti_russian_focus_desc:0 ""
 ROM_anti_russian_propaganda_idea:0 "Anti-Russian Propaganda"
