--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -9312,7 +9312,7 @@ FRA_salary_limitation_act_desc:0 "The law proposed by §YMaurice Thorez§! defin
 #Romania
 king_opinion_set_n.tt:0 "The kings opinion of the current government become §YNeutral§!, which gives us:\nDaily Political Power Gain: §Y+0.00§!\nStability: §Y+0.00%§!"
 king_opinion_set_ha.tt:0 "The kings opinion of the current government become §GVery Positive§!, which gives us:\nPolitical Power Gain: §G+20%§!\nStability: §G+12.00%§!"
-ROM_adopt_a_workers_right_plank: "Adopt a Workers Rights Platform"
+ROM_adopt_a_workers_right_plank: "Adopt a Platform on Workers Rights "
 king_opinion_improve.tt:0 "The king's opinion of the current government will §Gimprove§!"
 king_opinion_worse.tt:0 "The king's opinion of the current government will §Rworsen§!"
 ROM_kings_rotation_desc:0 "Romanias King prefers a 'rotation' between the 3 main parties of Romania, the §lPNL§!, the §mPCD§!, and the §cPC§!. As such, Romanias King generally loses confidence in the ruling government the longer it rules."
