--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -7972,7 +7972,7 @@ FRA_ministery_of_national_defense_desc:0 "Emperor Napoleon wanted to create a mi
  FRA_paul_deroulede_ship:0 "§L(Paul Deroulède)§!"
  ship_40_percent:0 "The ship will be §Y40%§! completed."
  ship_60_percent:0 "The ship will be §Y60%§! completed."
-
+ROM_sway_the_vote_of_soldiers:0 "Sway the Vote of Soldiers"
  FRA_jeanne_darc_class:0 "Lay Down Jeanne d'Arc Class"
  FRA_jeanne_darc_class_desc:0 "Innovations in the construction of battleships allow the development of new, faster and more efficient models."
 
