--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5141,6 +5141,7 @@ no_happy_few:0 "Didn't accept Carols request to not undo land reform"
 ROM_enpower_the_elites:0 "Empower The Elites"
 ROM_enpower_the_elites_desc:0 ""
 ROM_enpower_the_elites.tt:0 "For every §Y8.00%§! §3Democratic§! support, this focus will give us:\nPolitical Power: §G+5§!.\n\nBecause of our current §3Democratic§! support, this focus will give:"
+ROM_enpower_the_elites.tt2:0 "For every §Y8.00%§! §3Democratic§! support, this focus will give us:\nStability: §G+0.50%§!.\n\nBecause of our current §3Democratic§! support, this focus will give:"
 ROM_we_happy_few:0 "We Happy Few"
 ROM_we_happy_few_desc:0 "Is it not the landlords who make up some of the richest in Romania? Angering them further won't do us any good, and we should instead reach out to landlords and offer them some input on our future domestic legislation"
 ROM_the_third_force:0 "The Third Force"
@@ -5321,7 +5322,7 @@ ROM_law_and_order_desc:0 "The kings number 1 priority above all is clearly a sta
 ww1_romania.23.a:0 "They're traitors to their country!"
 ww1_romania.24.a:0 "They're all washed up losers anyways"
 ww1_romania.25.a:0 "...thanks?"
-ROM_agrarianists_in_power:0 "The Agrarianist Canidate"
+ROM_agrarianists_in_power:0 "The Agrarianist Candidate"
 ROM_agrarianists_in_power_desc:0 "The fall of Carps corrupt government has lead to the king appointing Titu Maiorescu as prime minister. Maiorescu is apart of the 'Agrarianist' faction of the PC, which prioritizes fiscal responsibility, social conservatism, and as one would expect, rural issues such as education and land reform."
 ROM_for_country_side:0 "For the Country Side"
 ROM_for_country_side_desc:0 "While a solid majority of the conservative party is made up of elites from urban areas, we cannot leave the rural areas, where most of the country lives, behind. We must give them special attention and continue to support their development."
@@ -5354,11 +5355,12 @@ ROM_the_carpist_renaissance_desc:0 ""
 ROM_national_unity:0 "The National Unity State"
 ROM_national_unity_desc:0 ""
 ww1_romania.35.t:0 "Alexandru Marghiloman Proposes Press Censorship"
-ww1_romania.35.d:0 "As we work towards restoring decency and cooperation in our politics once again, a question amongst Carps government has arised: can the anarchists, the agitators, the embezzlers, the looters, and people who in many instances have absolutely no clue what they are doing be trusted to act in good faith? They already tried a silly boycott of our government before, and they already organized large disruptive protests just because they lost, so who's to say they wouldn't try to go further? Marghiloman in particular is concerned with this possibility, and has began drafting concepts of a plan to begin censoring news surrounding the PNL, weakening their ground game amongst voters. This would help us win future elections against the PNL, although it could anger some CINO's in the party and possibly push some of them towards the PCD or even the PNL"
+ww1_romania.35.d:0 "As we work towards restoring decency and cooperation in our politics once again, a question amongst Carps government has arised: can the anarchists, the agitators, the embezzlers, the looters, and people who in many instances have absolutely no clue what they are doing be trusted to act in good faith? They already tried a silly boycott of our government before, and they already organized large disruptive protests just because they lost, so who's to say they wouldn't try to go further? Marghiloman in particular is concerned with this possibility, and has concepts of a plan to begin censoring news surrounding the PNL, weakening their ground game amongst voters. This would help us win future elections against the PNL, although it could anger some CINO's in the party and possibly push some of them towards the PCD or even the PNL"
 ww1_romania.35.a:0 "We have every right to interfere in the press!"
 ww1_romania.35.b:0 "It's not worth the backlash"
 ROM_national_unity.tt:0 "For every §Y8.00%§! §qProto-Fascist§! support, this focus will give us:\nGain Base Stability: §G+1.00%§!.\n\nBecause of our current §qFascist§! support, this focus will give:"
 ROM_reconcile_pcd:0 "Reconcile the PCD"
+ROM_romania_for_those_who_earn_it_idea:0 "An Optimistic Romania "
 ROM_reconcile_pcd_desc:0 ""
 ROM_great_egoism:0 "Great Egoism"
 ROM_accept_the_call_to_war:0 "Accept The Call To War"
