--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1012,7 +1012,7 @@
  STATE_1011: "Veracruz Port"
  STATE_1012: "Cherepovets"
  STATE_1013: "Asterabad"
- STATE_1014: "Caribbean Netherlands"
+ STATE_1014: "Dutch Caribbean"
  STATE_1015: "Karesi"
  STATE_1016: "Eskişehir"
  STATE_1017: "Yozgat"
