--- a/localisation/english/bookmarks_l_english.yml
+++ b/localisation/english/bookmarks_l_english.yml
@@ -26,7 +26,7 @@
 
  GRE_POWDERKEG_DESC:0 "The past few decades have proven quite tough for Greece. The bankruptcy of 1893, the lost Greco-Turkish war of 1897 with imposed international financial control and the Goudi coup of 1909 have left Greece in a dire state. It is time now that reforms are passed in all sectors, especially with the war looming on the sick man of Europe, the Ottomans. \n\nIt is time we rid this country of past failures and stabilize it. Perhaps in the process we will reconquer our long lost capital since 1453."
 
- ROM_POWDERKEG_DESC:0 "Goud"
+ ROM_POWDERKEG_DESC:0 "In 1910, the Kingdom of Romania, led by King Carol I, is a young nation striving for modernization. While cities like Bucharest are developing, the country remains largely agrarian, with a sharp divide between wealthy landowners and the peasant majority. Having gained independence from the Ottoman Empire, Romania is focused on strengthening its national identity, with hopes of uniting all Romanians, including those in territories like Transylvania, still under foreign control."
 
  MEX_POWDERKEG_DESC:0 "The Mexico of 1910 is a strange case indeed. The Porfiriato has been a great boon to Mexico since 1876, but now that the heat has been turned up, it seems President Diaz's time may be limited. Of course, the Government sees this as biting the hand. \n\nFrancisco Madero is actively and obviously plotting against the Diaz government. If he finds himself ambitious enough, he may see Mexico in his own back pocket yet."
 
