--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5193,7 +5193,7 @@ ROM_continue_democratization:0 "Continue Democratisation"
 ROM_continue_democratization_desc:0 "The idea of democracy was one of the strongest founding principals for Romania. While it has its faults, this system has generally worked well enough so far. Besides, if a liberal were to take power then a strong, conservative parliment would be benefit us."
 ROM_decentralization:0 "Decentralization"
 ROM_decentralization_desc:0 "Romania is full of many different diverse communities with different needs. Local governments will understand their peoples needs best, and we should empower then."
-ROM_the_burdens_they_endure:0 "The Burdens They Bear"
+ROM_the_burdens_they_endure:0 "Special Privilege to Soldiers"
 ROM_the_burdens_they_endure_desc:0 "Being a soldier is the hardest job one can have. Their devotion to Romania is unmatched, and they are the backbone of the state. We must reward our loyal soldiers with additional benefits."
 right_wing_populist:0 "Right Wing Populist"
 alexandru_c_cuza:0 "Alexandru Cuza"
