--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5234,7 +5234,7 @@ ROM_social_conservative_principal:0 "Social Conservative Principal"
 ROM_social_conservative_principal_desc:0 ""
 ROM_take_ionescu:0 "Take Ionsecu"
  ROM_the_natural_party_of_governance:0 "The Natural Party of Governance"
- ROM_the_natural_party_of_governance_desc:0 "The PNL has ruled competently for the past 3 years. Entrusted by the king and the people, the PNL has carefully passed much needed reforms and brought stability to the country ever since the 1907 peasant revolt. Its clear the PNL is suitable to continue governing"
+ ROM_the_natural_party_of_governance_desc:0 "The PNL has ruled competently for the past 3 years. Entrusted by the king and the people, the PNL has carefully passed much needed reforms and brought stability to the country ever since the 1907 peasant revolt. Its clear the PNL is suitable to continue governing."
 ROM_from_the_top_down:0 "Encourage Foreign Investment"
 ROM_from_the_top_down_desc:0 "The peasant class will do best when the economy does best. We need to continue industrialization, to create more low skill, medium pay factory jobs for the population. To do this, we should offer lucrative tax cuts to foreign companies wishing to invest in romania."
 ROM_land_reform_pass:0 "Land Reform Bill has Passed"
