Charlie Kirk And "Head Empty" Fascism

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1423,8 +1423,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ROM_army_reform_decision:0 "Army Reorganization"
  ROM_fix_the_railways:0 "Fix the Railways"
  ROM_fixing_the_railways.tt:0 "\nWhen this decision is taken:\n§YFor 365 Days:§!\nConsumer Goods Factories factor: §Y10.0%§!\n\n§YEffects when removed:§!\nModify §YPoor Railway System§! by\nConsumer Goods Factories factor: §Y-5.0%§!\nConstruction Speed: §G+5.00%§!"
- ROM_kings_country_category:0 "Kings country"
- ROM_kings_country_category_desc:0 "kings approval of government §Y[?kings_approval_of_government]§!"
+ ROM_kings_country_category:0 "King's country"
+ ROM_kings_country_category_desc:0 "king's approval of government §Y[?kings_approval_of_government]§!"
  ROM_king_appoints_new_government:0 "King Appoints New Government"
  ROM_encourage_aromanian_migration:0 "Encourage Aromanian Migration"
 
@@ -9310,8 +9310,8 @@ FRA_salary_limitation_act:0 "Salary Limitation Act"
 FRA_salary_limitation_act_desc:0 "The law proposed by §YMaurice Thorez§! define a calculation formula limiting the maximum salary within a company based on its profits, the number of employees and the lowest salary. To resume it in its simplest form, it limits the maximum salary to 25 times the lowest salary in the company."
 
 #Romania
-king_opinion_set_n.tt:0 "The kings opinion of the current government become §YNeutral§!, which gives us:\nDaily Political Power Gain: §Y+0.00§!\nStability: §Y+0.00%§!"
-king_opinion_set_ha.tt:0 "The kings opinion of the current government become §GVery Positive§!, which gives us:\nPolitical Power Gain: §G+20%§!\nStability: §G+12.00%§!"
+king_opinion_set_n.tt:0 "The king's opinion of the current government become §YNeutral§!, which gives us:\nDaily Political Power Gain: §Y+0.00§!\nStability: §Y+0.00%§!"
+king_opinion_set_ha.tt:0 "The king's opinion of the current government become §GVery Positive§!, which gives us:\nPolitical Power Gain: §G+20%§!\nStability: §G+12.00%§!"
 ROM_adopt_a_workers_right_plank: "Adopt a Platform on Workers Rights "
 king_opinion_improve.tt:0 "The king's opinion of the current government will §Gimprove§!"
 king_opinion_worse.tt:0 "The king's opinion of the current government will §Rworsen§!"
@@ -9327,6 +9327,6 @@ ROM_king_view_approve:0 "§7Positive§!, which gives us:\nPolitical Power Gain: 
 ROM_king_view_complete_approve:0 "§GVery positive§!, which gives us:\nPolitical Power Gain: §G+20%§!\nStability: §G+12.00%§!"
 ROM_king_view_approve2:0 "§7Positive§!, which gives us:\nPolitical Power Gain: §G+10%§!\nStability: §G+6.00%§!\nBecause we've completed the focus '§YA Useful Ally§!', we're also receiving:\nPolitical Advisor Cost: §G-25%§!"
 ROM_king_view_complete_approve2:0 "§GVery positive§!, which gives us:\nPolitical Power Gain: §G+20%§!\nStability: §G+12.00%§!\nBecause we've completed the focus '§YA Useful Ally§!', we're also receiving:\nPolitical Advisor Cost: §G-25%§!"
-ROM_kings_rotation:0 "Kings Rotation"
-ROM_useful_ally_focus_tt:0 "§CModifies§! the effects of the '§YKings Country§!' mechanic by the following:\n§7Positive§!: Political Advisor Cost: §G-15%§!\n§GVery Positive§!: Political Advisor Cost: §G-25%§!"
+ROM_kings_rotation:0 "King's Rotation"
+ROM_useful_ally_focus_tt:0 "§CModifies§! the effects of the '§YKing's Country§!' mechanic by the following:\n§7Positive§!: Political Advisor Cost: §G-15%§!\n§GVery Positive§!: Political Advisor Cost: §G-25%§!"
 ROM_autocomplete_ww1:0 "This focus will be bypasses once §YThe Great War§! begins"
