--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5246,7 +5246,7 @@ on_select_ROM_our_duty_to_the_people:0 "On selection of this focus:\nGets event 
 ROM_king_carols_reign:0 "King Carol's Reign"
 ROM_king_carols_reign_desc:0 "The founding father of the modern Romanian state, King Carol, has lead us well so far. With his great wisdom, Romania has gone from a rump puppet state of the Ottoman Turks to a strong and independent nation. With his guiding hand, Romania will continue to propser in the 20th century!"
 ROM_our_duty_to_the_people:0 "Our Duty to the People"
-ROM_our_duty_to_the_people_desc:0 "The biggest issue of today is undoubtedly land reform. We are slowly but surely making progress on the issue, but unfortunately it may be too slowly for the people. To continue progress, lets draft a major land reform bill."
+ROM_our_duty_to_the_people_desc:0 "The biggest issue of today is undoubtedly land reform. We are slowly but surely making progress on the issue, but unfortunately it may be too slowly for the people. To continue progress, we should draft a major land reform bill."
 ROM_law_on_southern_dobruja:0 "Law on Southern Dobruja"
 ROM_law_on_southern_dobruja_desc:0 ""
 ROM_encourage_romanian_migration_dobruja:0 "Encourage Romanian Migration to Dobruja"
