--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5032,13 +5032,13 @@ ww1_romania.1.a:0 "The king is a very wise man"
 ww1_romania.1.b:0 "Lets hope he doesn't undermine Romanian democracy..."
 ww1_romania.2.t:0 "The Brătianu Land Reform Bill - Debate Begins"
 ww1_romania.5.a:0 "What a disaster!"
-ww1_romania.2.d:0 "Prime minister Ion Brătian and the liberal party have finally finished drafting a new land reform bill that would give more power to the majority of Romanians, and now it just needs to pass in parliament, which may be harder said then done. Conservatives of course oppose the bill, but moderates, and the king are also wary. Most likely being out of touch, they see previous measures of the government as amble enough, and see this bill as risking a Romanian brain drain. Passing this bill won't be easy, and we will need careful maneuvering to get a majority of the votes."
+ww1_romania.2.d:0 "Prime minister Ion Braitanu and the liberal party have finally finished drafting a new land reform bill that would give more power to the majority of Romanians, and now it just needs to pass in parliament, which may be harder said then done. Conservatives of course oppose the bill, but moderates, and the king are also wary. Most likely being out of touch, they see previous measures of the government as able enough, and see this bill as risking a Romanian brain drain. Passing this bill won't be easy, and we will need careful maneuvering to get a majority of the votes."
 ww1_romania.2.a:0 "We'll get it done!"
 ww1_romania.4.t:0 ""The Brătianu Land Reform Bill - Convincing the PCD"
 ww1_romania.4.d:0 "The current make up of Romanias parliament means that convincing moderates to support the land reform bill will be required to pass it. Several members from the PCD, a splinter from the more conservative PC, seems somewhat open to the land reform bill we've proposed. Some do fear its a bit too extreme, but changing the bill at all may risk angering the more liberal members of our party, who may protest vote against the bill. What will our next course be?"
 ROM.4.c.tt:0 "The §cPCD§! will expect us to appoint an §Yadvisor§! from thier party if we win the next elections. If we do not, they will §Cfuse§! with the opposition, leading to its own §Rconsequences§!!"
  ww1_romania.3.t:0 ""The Brătianu Land Reform Bill - Landlords Petition the Government"
- ww1_romania.3.d:0 "The all powerful landlords in Romania have protested our recent land reform bill currently being debated in parliament. Providing a variety of reasons why the bill would hurt Romanias society and economy, they've heavily encouraged us to abandon the bill all together. While they don't hold votes in parliament, their opposition to our government would hurt our position a lot, considerng their vast influence in the country"
+ ww1_romania.3.d:0 "The all powerful landlords in Romania have protested our recent land reform bill currently being debated in parliament. Providing a variety of reasons why the bill would hurt Romanias society and economy, they've heavily encouraged us to abandon the bill altogether. While they don't hold votes in parliament, their opposition to our government would hurt our position a lot, considerng their vast influence in the country"
  ww1_romania.3.a:0 "Have they forgotten about 1907 so quickly? Onwards with the bill!"
  ww1_romania.3.b:0 "They have some points, we can pick this up when the situation is more stable."
 ww1_romania.4.a:0 "Lets twist some arms"
@@ -5198,6 +5198,7 @@ ROM_the_burdens_they_endure_desc:0 "Being a soldier is the hardest job one can h
 right_wing_populist:0 "Right Wing Populist"
 alexandru_c_cuza:0 "Alexandru Cuza"
 disable_halve_parliment:0 "§RDIsables§! National Focus: '§YHalve Parliaments Seats§!'"
+ROM_no_take_halve:0 "Has promised King that we won't pursue this policy"
 disable_we_happy_few:0 "§RDIsables§! National Focus: '§YWe Happy Few§!'"
 ROM_promote_romanian_nationalism:0 "Promote Romanian Nationalism"
 ROM_promote_romanian_nationalism_desc:0 "There are millions of Romanians outside of our borders who live in foreign territory that should really belong to us. To prepare to bring them back home, we need to fan the flames of nationalism of the people both inside and outside our borders"
@@ -5895,7 +5896,7 @@ ROM_rural_base.tt2:0 "\nOur advisor §YDmitrie Sturdza§! is §GImproving§! the
  TUR_secure_army_loyalty:0 "Secure Army Loyalty"
  TUR_secure_army_loyalty_desc:0 "Under the liberal reforms, the army has been opened for all ethnic groups, including for Arabs. Yet most of the officers are still Turks. With the orders from their higher ups, they're harassing the Arabs. If we want to secure our rule, we must gain their loyalty."
  TUR_for_the_good_of_the_arabs:0 "For the Good of the Arabs"
- TUR_for_the_good_of_the_arabs_desc:0 "Though we've rose to power with Arab popular support, the Turks in the administration are trying to undermine our rule by calling for early elections. Such times requires drastic measures. If they're willing to hold a rigged election, then we'll cancel elections all together. All is for the good of the Arabs."
+ TUR_for_the_good_of_the_arabs_desc:0 "Though we've rose to power with Arab popular support, the Turks in the administration are trying to undermine our rule by calling for early elections. Such times requires drastic measures. If they're willing to hold a rigged election, then we'll cancel elections altogether. All is for the good of the Arabs."
  TUR_question_of_the_society_leadership:0 "Question of the Society Leadership"
  TUR_question_of_the_society_leadership_desc:0 "What stems from a literature society has now evolved into a continent spanning empire's ruling society. Our society membership has grown to large numbers. With that, a lot of voices and ideas started to gain attraction. From liberals to militarists, monarchists to conservatives; every groups seeks for power withing the society. We must choose among one to set the course of the society and the empire."
  TUR_restore_the_rightful_sultan:0 "Restore the Rightful Sultan"
